--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <div id="instructions">INSTRUCTIONS
                 <div id='instructions2'>
                     <ul>
-                        <li>Don't let any health Bar get to ZERO.</li>
+                        <li>Don't let any health Bar get to ZERO</li>
                         <li>SURVIVE FOR 30 SECONDS</li>
                         <li>Mouse Left click to Heal after some time (low mana)</li>
                         <li>Mouse Right click to instant Heal on 2 random Bars (high mana)</li>
